--- a/democlient_info.html
+++ b/democlient_info.html
@@ -38,7 +38,7 @@
 	<!--left Menu-->
 	<div id="aside" class="aside-fixed">
 		<div class="aside-header">
-			<h1><a href="/"><img src="img/logo3.png" alt="KMS MPS"></a></h1>
+			<h1><a href="/"><img src="img/logo3.png" alt=""></a></h1>
 			<button type="button"><i class="icon-sign03"></i></button>
 		</div>
 		<div class="gnb">			
