--- a/pitching_update.html
+++ b/pitching_update.html
@@ -140,7 +140,9 @@
 			<div class="main-list border-section">
 				<div class="list-top flex">
 					<p>Total <b class="num">154</b></p>
-					
+					<div class="button-wrap">
+						<button type="button" class="btn btn-sm">Save</button>
+					</div>					
 				</div>
 				<div class="table-wrap table-scroll">
 					<table class="table-row">
