--- a/demosong_excelUpload.html
+++ b/demosong_excelUpload.html
@@ -48,7 +48,7 @@
 					<ul class="dep-dep1">
 						<!-- 해당 페이지일경우 on 태그 넣어주세요-->
 						<li><a href="index.html">Demo Song List</a></li>
-						<li><a href="demosong_info.html" class="on">Demo Song Info</a></li>
+						<li><a href="demosong_info.html">Demo Song Info</a></li>
 					</ul>
 				</li>
 				<li class="nav-list">
@@ -56,6 +56,7 @@
 					<ul class="dep-dep1">
 						<!-- 해당 페이지일경우 on 태그 넣어주세요-->
 						<li><a href="pitching_update.html">Pitching History Update</a></li>
+						<li><a href="demosong_excelUpload.html" class="on">Excel Upload</a></li>
 					</ul>
 				</li>
 				<li class="nav-list">
