--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 					<ul class="dep-dep1">
 						<!-- 해당 페이지일경우 on 태그 넣어주세요-->
 						<li><a href="pitching_update.html">Pitching History Update</a></li>
+						<li><a href="demosong_excelUpload.html">Excel Upload</a></li>
 					</ul>
 				</li>
 				<li class="nav-list">
