엑셀업로드 수정

--- a/demosong_excelUpload.html
+++ b/demosong_excelUpload.html
@@ -112,8 +112,8 @@
 						</dl>
 						
 						<div class="button-wrap">
-							<label for="file">
-								<input type="file" name="file" id="file" class="input-file">
+							<label for="excelfile" class="input-file">
+								<input type="file" name="file" id="excelfile" >
 								<div class="btn-upload btn green btn-sm"><i class="icon-arrow86"></i> Excel Upload</div>
 							</label>
 						</div>
